[tool.poetry]
name = "light-text-prepro"
version = "0.2.2"
description = ""
authors = ["Alfonso Farruggia <alfarruggia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.4.1"
flake8 = "^3.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
